--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,27 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="QMUI.Compat.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimaryDark">@color/colorPrimary</item>
+        <item name="colorAccent">@color/colorPrimary</item>
+
+        <item name="QMUITopBarStyle">@style/QDTopBar</item>
+        <item name="qmui_topbar_height">44dp</item>
+    </style>
+
+    <style name="QDTopBar" parent="QMUI.TopBar">
+        <item name="qmui_topbar_separator_color">#FFC2C8CF</item>
+        <item name="qmui_topbar_separator_height">0.5dp</item>
+        <item name="qmui_topbar_bg_color">@color/colorPrimary</item>
+        <item name="qmui_topbar_title_text_size">18sp</item>
+        <item name="qmui_topbar_title_color">#FF333333</item>
+        <item name="qmui_topbar_subtitle_color">@color/qmui_config_color_white</item>
+        <!--<item name="qmui_topbar_text_btn_color_state_list">@color/s_topbar_btn_color</item>-->
+        <item name="qmui_topbar_image_btn_height">44dp</item>
+        <item name="qmui_topbar_image_btn_width">44dp</item>
+        <item name="qmui_topbar_left_back_drawable_id">@drawable/icon_main_back</item>
     </style>
 
 </resources>
