2019/02/26 玩Android基础Module搭建  网络请求添加

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,54 +2,31 @@
 <layout>
 
     <data>
+
         <variable
             name="text"
             type="String" />
     </data>
 
-    <com.qmuiteam.qmui.widget.QMUIWindowInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <com.qmuiteam.qmui.widget.QMUIWindowInsetLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
-        <LinearLayout
+        <FrameLayout
+            android:id="@+id/home_fragment_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="?attr/qmui_topbar_height"
-            android:background="#FFFFFF"
-            android:fitsSystemWindows="true"
-            android:orientation="vertical">
+            android:layout_marginBottom="@dimen/dp49" />
 
-            <Button
-                android:id="@+id/fragment_home_test_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="top|center"
-                android:text="测试"
-                android:textColor="#262626"
-                android:textSize="16sp" />
-
-            <ScrollView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:scrollbars="none">
-
-                <TextView
-                    android:id="@+id/fragment_home_test_tv"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="#262626"
-                    android:text="@{text}"
-                    android:textSize="14sp" />
-            </ScrollView>
-        </LinearLayout>
-
-        <com.qmuiteam.qmui.widget.QMUITopBarLayout
-            android:id="@+id/fragment_home_top_bar"
+        <com.qmuiteam.qmui.widget.QMUITabSegment
+            android:id="@+id/home_fragment_tabs"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fitsSystemWindows="true"
-            app:qmui_topbar_need_separator="true" />
+            android:layout_height="@dimen/dp49"
+            android:layout_gravity="bottom"
+            android:background="?attr/qmui_list_item_bg_with_border_top"
+            android:textSize="12sp"
+            app:qmui_tab_icon_position="top" />
     </com.qmuiteam.qmui.widget.QMUIWindowInsetLayout>
 </layout>
