--- a/main/src/main/res/layout/fragment_main.xml
+++ b/main/src/main/res/layout/fragment_main.xml
@@ -2,6 +2,7 @@
 <layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.qmuiteam.qmui.widget.QMUIWindowInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -20,6 +21,18 @@
                 app:banner_tipTextColor="@color/c_CCFFFFFF"
                 app:banner_tipTextSize="@dimen/sp16"
                 app:banner_transitionEffect="alpha" />
+
+            <com.scwang.smartrefresh.layout.SmartRefreshLayout
+                android:id="@+id/main_refresh"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/main_banner">
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/main_recy"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+            </com.scwang.smartrefresh.layout.SmartRefreshLayout>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </com.qmuiteam.qmui.widget.QMUIWindowInsetLayout>
 </layout>
