--- a/know/src/main/res/layout/fragment_know.xml
+++ b/know/src/main/res/layout/fragment_know.xml
@@ -1,14 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+    <com.qmuiteam.qmui.widget.QMUIWindowInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <TextView
+        android:layout_height="match_parent">
+
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:text="know"
-            android:textSize="20sp" />
-    </LinearLayout>
+            android:layout_marginTop="?attr/qmui_topbar_height"
+            android:background="#FFFFFF"
+            android:fitsSystemWindows="true">
+
+            <com.scwang.smartrefresh.layout.SmartRefreshLayout
+                android:id="@+id/fragment_know_refresh"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/fragment_know_left"
+                        android:layout_width="@dimen/dp120"
+                        android:layout_height="match_parent" />
+
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/fragment_know_right"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1" />
+                </LinearLayout>
+
+            </com.scwang.smartrefresh.layout.SmartRefreshLayout>
+        </FrameLayout>
+
+        <com.qmuiteam.qmui.widget.QMUITopBarLayout
+            android:id="@+id/fragment_know_top_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fitsSystemWindows="true"
+            app:qmui_topbar_need_separator="true" />
+    </com.qmuiteam.qmui.widget.QMUIWindowInsetLayout>
 </layout>
