2019/03/01 项目界面重新排版编写

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#D81B60</color>
 
     <color name="c_FF3C8FF9">#FF3C8FF9</color>
+    <color name="c_FF1927D0">#FF1927D0</color>
     <color name="c_FF333333">#FF333333</color>
     <color name="c_7F333333">#7f333333</color>
     <color name="c_FF174B8D">#FF174B8D</color>
